# TriP

./: README.md  config.toml  cromwell_jaws_shifter.conf  pyproject.toml
notebook/: ReformatMetadata.ipynb
scripts/: get_data.sh  reformat_all.sh
src/nmdcwf/: assembly.py  cli.py  job.py  qc.py  workflow.py
src/nmdcwf/etc/: config.toml
